fix: tinkering with waybar css, also gaps for sway

--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -18,7 +18,7 @@
 }
 
 toolbar, window#waybar {
-    background: rgba(00,00,00,00);
+    background: rgba(0,0,0,0); 
 }
 
 #clock,
